[package]
name = "loader"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_config = "0.37.1"
deno_lockfile = "0.23.1"
deno_package_json = "0.1.2"
deno_semver = "0.5.13"
serde = "1.0.210"
serde_json = "1.0.128"
serde-wasm-bindgen = "0.6.5"
thiserror = "1.0.64"
url = "2.5.2"
wasm-bindgen = "=0.2.92"
